# weatherdataexplained.com

./: CLAUDE.md  README.md
WeatherDataTool/: .gitignore  CLAUDE.MD  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
WeatherDataTool/.github/workflows/: ci.yml
WeatherDataTool/configs/: config.yaml
WeatherDataTool/scripts/: quick_analyze.sh  run_local_ci.sh  run_pipeline.sh
WeatherDataTool/src/weather_data_tool/: __init__.py  analyze.py  cli.py  download.py  io.py  regrid.py  utils.py
WeatherDataTool/tests/: conftest.py  test_analyze.py  test_download.py  test_io.py  test_regrid.py  test_utils.py
