[project]
name = "weather-data-tool"
version = "0.1.0"
description = "Production-quality tool for downloading, regridding, and analyzing weather forecast data"
authors = [{name = "WeatherDataTool Contributors"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "xarray>=2023.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "xesmf>=0.8.0",
    "netCDF4>=1.6.0",
    "zarr>=2.14.0",
    "fsspec>=2023.1.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
    "cartopy>=0.21.0",
    "click>=8.1.0",
    "dask>=2023.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.0.260",
    "mypy>=1.0.0",
]

[project.scripts]
weather-data-tool = "weather_data_tool.cli:cli"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
